manifests/route.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: logping-route
spec:
  parentRefs:
  - name: my-gateway
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /status
    backendRefs:
    - name: log-output-svc
      port: 2345
  - matches:
    - path:
        type: PathPrefix
        value: /pingpong
    filters:
      - type: URLRewrite
        urlRewrite:
          path:
            type: ReplacePrefixMatch
            replacePrefixMatch: /
    backendRefs:
    - name: pingpong-svc
      port: 2344
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: log-app-root-svc
      port: 2345
